# libro-library

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  Dockerfile  celerybeat-schedule  conftest.py  pyproject.toml  pytest.ini  requirements.txt
backend/auth_app/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/auth_app/migrations/: 0001_initial.py
backend/chatbot/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/chatbot/migrations/: 0001_initial.py
backend/core/: celery.py  settings.py  urls.py
backend/vector/user_1/book_4/: chroma.sqlite3
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/favorites/: page.tsx
frontend/app/notes/: page.tsx
frontend/components/: book-card.tsx  protected-route.tsx  sidebar.tsx
frontend/components/ui/: progress.tsx
frontend/contexts/: auth-context.tsx
frontend/hooks/: use-auth.ts  use-books.ts
frontend/lib/api/: auth.ts  books.ts  chatbot.ts  client.ts
nginx/: nginx.conf
